##
## Process this file with automake to produce 'Makefile.in'
##
## To create the configure script using this file follow these steps
## in order
## 1. write Makefile.am
## 2. autoscan
## 3. aclocal
## 4. autoheader
## 5. autoconf
## 6. automake -ac --foreign
##

confdir = $(prefix)/lib/systemd/system/
conf_DATA = axfrdns.service dnscache.service rbldns.service tinydns.service

EXTRA_DIST = axfrdns.service dnscache.service rbldns.service tinydns.service
